--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 29/06/2025
+        Dernière modification : 12/12/2025
     </div>
     
 <table class="table table-hover">
@@ -540,6 +540,27 @@ th {
 <td>Français</td>
 <td>9.14</td>
 <td>290</td>
+</tr>
+<tr class="table-info"><td>Hebrew and English Lexicon for the old Testament</td>
+<td>Brown-Driver-Briggs</td>
+<td>/</td>
+<td>/</td>
+<td>33.61</td>
+<td>1156</td>
+</tr>
+<tr class='table-light'><td>    Aleph - Mem</td>
+<td>Brown-Driver-Briggs</td>
+<td>Executive</td>
+<td>Hébreu</td>
+<td>16.59</td>
+<td>569</td>
+</tr>
+<tr class='table-light'><td>    Mem - Taw & Biblical Aramaic</td>
+<td>Brown-Driver-Briggs</td>
+<td>Executive</td>
+<td>Hébreu</td>
+<td>17.02</td>
+<td>587</td>
 </tr>
 <tr class='table-light'><td>Improvisation on the organ</td>
 <td>Schouten</td>
